add qrscan controller for admin

--- a/pom.xml
+++ b/pom.xml
@@ -55,6 +55,11 @@
             <version>3.5.3</version> <!-- Sử dụng phiên bản mới nhất -->
         </dependency>
         <dependency>
+            <groupId>com.google.zxing</groupId>
+            <artifactId>javase</artifactId>
+            <version>3.5.3</version>
+        </dependency>
+        <dependency>
             <groupId>javax.servlet</groupId>
             <artifactId>jstl</artifactId>
             <version>1.2</version>
